[package]
name = "ftp"
version = "3.0.1"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/ftp/"
repository = "https://github.com/mattnenterprise/rust-ftp"
description = "FTP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["ftp"]
categories = ["network-programming"]

[badges]
travis-ci = { repository = "mattnenterprise/rust-ftp" }

[features]
# Enable support of FTPS which requires openssl
secure = ["openssl"]

[dependencies]
lazy_static = "0.2"
regex = "0.2"
chrono = "0.3"
log = "0.3"

[dependencies.openssl]
version = "0.9"
optional = true
